# saskan

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  saskan.yml  setup.cfg  setup.py  xx_setup.cfg
Saskantinize/: __init__.py  app_admin.py  app_saskantinize.py  saskantinize.py
Saskantinon/: app_admin.py  app_saskan.py  app_saskan_gamemap.py  app_saskan_widgets.py  app_saskantinon.py  app_saskantinon_old.py  data_base.py  data_get.py  data_image_type.py  data_math.py  data_model.py  data_model_app.py  data_model_tool.py  data_model_world.py  data_pg_structs.py  data_set.py  data_structs.py  data_structs_pg.py  install  install_app.py  install_saskan.py  install_services.py  io_data.py  io_data_model.py  io_data_pydantic.py  io_db.py  io_file.py  io_get_data.py  io_graphs.py  io_pg_structs.py  io_set_data.py  io_set_get.py  io_set_get_data.py  io_shell.py  io_structs.py  io_wiretap_old.py  method_configs.py  method_files.py  method_shell.py  msg_sequencer.py  (+9 more)
Saskantinon/config/: bootstrap.json  frames.json  links.json  menus.json  windows.json
Saskantinon/sql/: CREATE_EXTERNAL_UNIVERSE.sql  CREATE_GLOSSARY.sql  CREATE_GRID.sql  CREATE_GRID_X_MAP.sql  CREATE_LAND_BODY_X_MAP.sql  CREATE_LAND_BODY_X_OCEAN_BODY.sql  CREATE_LANG_DIALECT.sql  CREATE_LUNAR_CALENDAR.sql  CREATE_MONTH.sql  CREATE_OCEAN_BODY_X_MAP.sql  CREATE_RIVER_X_MAP.sql  CREATE_SEASON.sql  CREATE_SOLAR_CALENDAR.sql  CREATE_SOLAR_CALENDAR_X_MONTH.sql  CREATE_SOLAR_YEAR.sql  CREATE_TEXTS.sql  CREATE_UNIVERSE.sql  DELETE_APP_CONFIG.sql  DELETE_FRAMES.sql  DELETE_GALAXY.sql  DELETE_GLOSSARY.sql  DELETE_GLOSS_COMMON.sql  DELETE_GRID.sql  DELETE_GRID_X_MAP.sql  DELETE_LAKE_X_MAP.sql  DELETE_LAND_BODY.sql  DELETE_LAND_BODY_X_LAND_BODY.sql  DELETE_LANGUAGE.sql  DELETE_LANG_FAMILY.sql  DELETE_LINKS.sql  DELETE_LUNAR_CALENDAR.sql  DELETE_MAP_X_MAP.sql  DELETE_MENU_BARS.sql  DELETE_RIVER_X_MAP.sql  DELETE_SOLAR_YEAR.sql  DELETE_STAR_SYSTEM.sql  DELETE_WORLD.sql  DROP_BACKUP.sql  DROP_CHAR_SET.sql  DROP_EXTERNAL_UNIVERSE.sql  (+103 more)
boot/: install_saskan.py  install_saskan.py.old  install_services.py
boot/config/: links.json  menu_bars.json  menu_items.json  menus.json  texts_en.json
boot/ddl/: CREATE_APP_CONFIG.sql  CREATE_BACKUP.sql  CREATE_BUTTON_ITEM.sql  CREATE_BUTTON_MULTI.sql  CREATE_BUTTON_SINGLE.sql  CREATE_CHAR_MEMBER.sql  CREATE_CHAR_SET.sql  CREATE_CROSS_X.sql  CREATE_DAY_TIME.sql  CREATE_EXTERNAL_UNIVERSE.sql  CREATE_FRAMES.sql  CREATE_GALACTIC_CLUSTER.sql  CREATE_GALAXY.sql  CREATE_GLOSSARY.sql  CREATE_GLOSS_COMMON.sql  CREATE_GRID.sql  CREATE_GRID_CELL.sql  CREATE_GRID_INFO.sql  CREATE_GRID_X_MAP.sql  CREATE_LAKE.sql  CREATE_LAKE_X_MAP.sql  CREATE_LAND_BODY.sql  CREATE_LAND_BODY_X_LAND_BODY.sql  CREATE_LAND_BODY_X_MAP.sql  CREATE_LAND_BODY_X_OCEAN_BODY.sql  CREATE_LANGUAGE.sql  CREATE_LANG_DIALECT.sql  CREATE_LANG_FAMILY.sql  CREATE_LINKS.sql  CREATE_LUNAR_CALENDAR.sql  CREATE_LUNAR_CALENDAR_X_MONTH.sql  CREATE_LUNAR_CALENDAR_X_WEEK_TIME.sql  CREATE_LUNAR_YEAR.sql  CREATE_LUNAR_YEAR_X_MOON.sql  CREATE_MAP.sql  CREATE_MAP_BOX.sql  CREATE_MAP_RECT.sql  CREATE_MAP_SPHERE.sql  CREATE_MAP_X_MAP.sql  CREATE_MENUS.sql  (+146 more)
db/: SASKAN.bak  SASKAN.db
db/dml/: INSERT_APP_CONFIG.sql  INSERT_BACKUP.sql  INSERT_BUTTON_ITEM.sql  INSERT_BUTTON_MULTI.sql  INSERT_BUTTON_SINGLE.sql  INSERT_CHAR_MEMBER.sql  INSERT_CHAR_SET.sql  INSERT_CROSS_X.sql  INSERT_DAY_TIME.sql  INSERT_EXTERNAL_UNIVERSE.sql  INSERT_FRAMES.sql  INSERT_GALACTIC_CLUSTER.sql  INSERT_GALAXY.sql  INSERT_GLOSSARY.sql  INSERT_GLOSS_COMMON.sql  INSERT_GRID.sql  INSERT_GRID_CELL.sql  INSERT_GRID_INFO.sql  INSERT_GRID_X_MAP.sql  INSERT_LAKE.sql  INSERT_LAKE_X_MAP.sql  INSERT_LAND_BODY.sql  INSERT_LAND_BODY_X_LAND_BODY.sql  INSERT_LAND_BODY_X_MAP.sql  INSERT_LAND_BODY_X_OCEAN_BODY.sql  INSERT_LANGUAGE.sql  INSERT_LANG_DIALECT.sql  INSERT_LANG_FAMILY.sql  INSERT_LINKS.sql  INSERT_LUNAR_CALENDAR.sql  INSERT_LUNAR_CALENDAR_X_MONTH.sql  INSERT_LUNAR_CALENDAR_X_WEEK_TIME.sql  INSERT_LUNAR_YEAR.sql  INSERT_LUNAR_YEAR_X_MOON.sql  INSERT_MAP.sql  INSERT_MAP_BOX.sql  INSERT_MAP_RECT.sql  INSERT_MAP_SPHERE.sql  INSERT_MAP_X_MAP.sql  INSERT_MENUS.sql  (+268 more)
docs/: Makefile  conf.py  installation.rst  make.bat  saskantinon.rst  usage.rst
lab/: SaskanNotebook.ipynb
lab/ai_lab/: lab_ai_test_data.py
src/Saskantinon/: __main__.py  app_characters.py  app_saskan.py  app_saskan_gamemap.py  app_saskan_widgets.py  app_saskantinize.py  app_time.py  boot.py  boot_saskan.py  boot_services.py  data_base.py  data_get.py  data_math.py  data_model.py  data_model_app.py  data_model_story.py  data_model_world.py  data_set.py  data_structs.py  data_structs_pg.py  method_files.py  method_shell.py  msg_server.py  rpt_analysis.py  rpt_graphs.py  saskantinize.py  saskantinon.py  wiretap.py  xx_method_configs.py
src/boot/: boot_saskan.py
src/boot/bash/: DEVNOTE.md
src/boot/config/: frames.json  widgets.json  windows.json
src/boot/ddl/: CREATE_CHAR_MEMBER.sql  CREATE_DAY_TIME.sql  CREATE_GALACTIC_CLUSTER.sql  CREATE_LUNAR_YEAR_X_MOON.sql  CREATE_MAP_X_MAP.sql  CREATE_MENU_BARS.sql  CREATE_MENU_ITEMS.sql  CREATE_WEEK_TIME.sql  CREATE_WEEK_TIME_X_DAY_TIME.sql  CREATE_WINDOWS.sql  CREATE_WORLD.sql  DELETE_CHAR_MEMBER.sql  DELETE_CHAR_SET.sql  DELETE_EXTERNAL_UNIVERSE.sql  DELETE_LUNAR_CALENDAR_X_WEEK_TIME.sql  DELETE_LUNAR_YEAR.sql  DELETE_LUNAR_YEAR_X_MOON.sql  DELETE_MENUS.sql  DELETE_MOON.sql  DELETE_RIVER.sql  DELETE_SOLAR_CALENDAR_X_MONTH.sql  DELETE_WEEK_TIME_X_DAY_TIME.sql  DELETE_WINDOWS.sql  DROP_APP_CONFIG.sql  DROP_CHAR_MEMBER.sql  DROP_GALAXY.sql  DROP_LANG_FAMILY.sql  DROP_LUNAR_YEAR.sql  DROP_MENUS.sql  DROP_MENU_BARS.sql  DROP_WEEK_TIME_X_DAY_TIME.sql  DROP_WORLD.sql
static/context/: context.json  userdata.json
test/: test_data_model_tool.py  test_saskantinize.py
tests_saskantinon/: test_data_model.py  test_io_data.py
