; A setup.cfg file follows INI format.
; Helps to clarify, organize project configs and to
; simplify the setup.py file.
; It is automatically read by setuptools.

; Define categorization qualities of the project.
; These help to classify the project in the Python Package Index.
[metadata]
name = Saskantinon
author = Genuine Merit Software
author_email = genuinmemerit@pm.me
description = Saskantinon game and admin tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/genuinemerit/saskan-app.git
license = MIT
keywords= Saskantinon, game, editor, RPG
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules

; universal wheel = 1 means that the wheel will be compatible
; with Python versions across all platforms and it it is a
; pure python package.   0 means it is platform specific.
[bdist_wheel]
universal = 1

; Define python packaging depedencies.
; N.B. This is list for a configure, build, install process.
; For creating a development environment, use saskan.yml
; with mamba.
; Use this instead of a requirements.txt file.
[options]
packages = find:
python_requires = >=3.10

; Define dependencies for the Saskantinon app.
[saskantinon]
install_requires =
    pathlib
    requests
    tzlocal
    openai
    twisted
    tornado
    music21
    pendulum
    sqlalchemy

; Define dependencies for the Saskantinize app.
[saskantinize]
install_requires =
    pathlib
    requests
    tzlocal
    openai
    numpy
    pandas
    twisted
    tornado
    pendulum
    numbers-parser
    beautifulsoup4
    tabulate
    nltk
    Levenshtein
    matplotlib
    networkx
    beautifulsoup4
    sqlalchemy
    ipykernel

; Define dependecies for development only
[options.extras_requires]
dev =
    pytest
    coverage
    flake8
    pycodestyle
    mypy
    isort
    black
    sphinx

; The following identifies directories within the
; project's python packages to exclude from the
; python build process.
; A python package is a directory within the project
; hierarchy which includes a __init__.py file.
[options.packages.find]
exclude =
    bash
    config
    html
    images
    schema
    sql
    tests

; A console_scripts entry point is a method or function
; within a package module that can be executed from the
; command line.
[options.entry_points]
console_scripts =
    saskantinon = Saskantinon.saskantinon:main
    saskantinize = Saskantinize.saskantiize:main

; Define dependecies for development only
[test]
extras = True

; Define testing options.
; Configure pytest to find test modules in tests directory.
[tool: pytest]
testpaths =
    tests_saskantinon
    tests_saskantinize
norecursedirs =
    lab
    docs

[project_urls]
Source = https://github.com/genuinemerit/saskan-app.git
Issues = https://github.com/genuinemerit/saskan-app/issues
Pull requests = https://github.com/genuinemerit/saskan-app/pulls
Documentation = https://github.com/genuinemerit/saskan-wiki

; The bumpversion is used during build to patch the
; version number in the setup.py file.
; This can be extended to update other files as well.
[bumpversion]
current_version = 0.1.1.3
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.?(?P<dev>\d+)?
serialize = {major}.{minor}.{patch}.{dev}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

; Set up for development, checking tools.
; modify the excludes to match project needs
[flake8]
exclude = docs,.git,log,debug
max-line-length = 120
ignore = D100,D101,D102,D103,E125,E203,W503,W504

; pycodestyle was formerly known as pep
[pycodestyle]
max-line-length = 140
exclude = .git,log,debug,venv, build

[mypy]
python_version = 3.12
check_untyped_defs = True
ignore_missing_imports = False
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[isort]
multi_line_output = 2
line_length = 120